--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.15.3",
+    "md5": "^2.2.1",
     "mongoose": "^4.10.5",
-    "pug": "^2.0.0-rc.2"
+    "mongoose-mongodb-errors": "0.0.2",
+    "passport-local-mongoose": "^4.0.0",
+    "pug": "^2.0.0-rc.2",
+    "validator": "^7.0.0"
   }
 }
